--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Forms\Web Forms\frmCurrentPackingShipments.aspx" />
+    <Content Include="Forms\Web Forms\frmLogin.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentDetailInfo.aspx" />
     <Content Include="Images\Kraus_Logo.jpg" />
     <Content Include="Images\main-bg.jpg" />
@@ -68,6 +69,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Master Forms\Admin.Master.cs">
+      <DependentUpon>Admin.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Master Forms\Admin.Master.designer.cs">
+      <DependentUpon>Admin.Master</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Master Forms\Home.Master.cs">
       <DependentUpon>Home.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -82,6 +90,13 @@
     <Compile Include="Forms\Web Forms\frmCurrentPackingShipments.aspx.designer.cs">
       <DependentUpon>frmCurrentPackingShipments.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Web Forms\frmLogin.aspx.cs">
+      <DependentUpon>frmLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmLogin.aspx.designer.cs">
+      <DependentUpon>frmLogin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Web Forms\frmShipmentDetailInfo.aspx.cs">
       <DependentUpon>frmShipmentDetailInfo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -93,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Forms\Master Forms\Home.Master" />
+    <Content Include="Forms\Master Forms\Admin.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
