--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 # git ignore file
+Release
+Debug
 /ShippingController(V1.0)/ShippingController(V1.0)/obj/Debug/ShippingController(V1.0).csproj.FileListAbsolute.txt
 /ShippingController(V1.0)/ShippingController(V1.0)/obj/Debug/ShippingController(V1.0).csprojResolveAssemblyReference.cache
 /ShippingController(V1.0)/ShippingController(V1.0)/obj/Debug/ShippingController(V1.0).dll
 /ShippingController(V1.0)/ShippingController(V1.0)/obj/Debug/ShippingController(V1.0).pdb
+
+ShippingController(V1.0)\ShippingController(V1.0)\bin*/
+ShippingController(V1.0)/ShippingController(V1.0)/bin/ShippingController(V1.0).pdb
+ShippingController(V1.0)\ShippingController(V1.0)\bin*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Debug*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Debug*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Debug*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
+ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
