--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
+    <Content Include="Forms\Web Forms\frmHomeIcon.aspx" />
     <Content Include="Forms\Web Forms\frmHomePage.aspx" />
     <Content Include="Forms\Web Forms\frmLogin.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentDetail.aspx" />
@@ -102,6 +103,13 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmDisableStation.aspx.designer.cs">
       <DependentUpon>frmDisableStation.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmHomeIcon.aspx.cs">
+      <DependentUpon>frmHomeIcon.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmHomeIcon.aspx.designer.cs">
+      <DependentUpon>frmHomeIcon.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmHomePage.aspx.cs">
       <DependentUpon>frmHomePage.aspx</DependentUpon>
