--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -67,11 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
+    <Content Include="Forms\Web Forms\frmShipmentInfoALl.aspx" />
     <Content Include="Forms\Web Forms\frmUserInformation.aspx" />
     <Content Include="Forms\Web Forms\frmHomePage.aspx" />
     <Content Include="Forms\Web Forms\frmLogin.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentDetail.aspx" />
-    <Content Include="Forms\Web Forms\frmShipmentDetailInfo.aspx" />
+    <Content Include="Forms\Web Forms\frmShipmentDetailSage.aspx" />
     <Content Include="Images\Kraus_Logo.jpg" />
     <Content Include="Images\main-bg.jpg" />
     <Content Include="Images\UserIcon.png" />
@@ -85,6 +87,7 @@
     <Compile Include="Classes\cDeactivateStation.cs" />
     <Compile Include="Classes\cGlobal.cs" />
     <Compile Include="Classes\DisplayEntitys\cstHomePageGv.cs" />
+    <Compile Include="Classes\DisplayEntitys\cstShipmentInformationAll.cs" />
     <Compile Include="Forms\Master Forms\Admin.Master.cs">
       <DependentUpon>Admin.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -105,6 +108,13 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmDisableStation.aspx.designer.cs">
       <DependentUpon>frmDisableStation.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmShipmentInfoALl.aspx.cs">
+      <DependentUpon>frmShipmentInfoALl.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmShipmentInfoALl.aspx.designer.cs">
+      <DependentUpon>frmShipmentInfoALl.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmUserInformation.aspx.cs">
       <DependentUpon>frmUserInformation.aspx</DependentUpon>
@@ -134,12 +144,12 @@
     <Compile Include="Forms\Web Forms\frmShipmentDetail.aspx.designer.cs">
       <DependentUpon>frmShipmentDetail.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetailInfo.aspx.cs">
-      <DependentUpon>frmShipmentDetailInfo.aspx</DependentUpon>
+    <Compile Include="Forms\Web Forms\frmShipmentDetailSage.aspx.cs">
+      <DependentUpon>frmShipmentDetailSage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetailInfo.aspx.designer.cs">
-      <DependentUpon>frmShipmentDetailInfo.aspx</DependentUpon>
+    <Compile Include="Forms\Web Forms\frmShipmentDetailSage.aspx.designer.cs">
+      <DependentUpon>frmShipmentDetailSage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Classes\PackingStat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
