Error log Page Completed
Auto Complete and DataGrid View Filling with Autocomplte

--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -89,7 +89,7 @@
   <ItemGroup>
     <Compile Include="Classes\cDeactivateStation.cs" />
     <Compile Include="Classes\cGlobal.cs" />
-    <Compile Include="Classes\DisplayEntitys\cstErrorLog.cs" />
+    <Compile Include="Classes\DisplayEntitys\cstDspErrorLog.cs" />
     <Compile Include="Classes\DisplayEntitys\cstHomePageGv.cs" />
     <Compile Include="Classes\DisplayEntitys\cstShipmentInformationAll.cs" />
     <Compile Include="Forms\Master Forms\Admin.Master.cs">
